update pages to login screen

--- a/app/pages/login/login.html
+++ b/app/pages/login/login.html
@@ -22,7 +22,7 @@
         <ion-list>
 
           <ion-item>
-            <ion-input [(ngModel)]="loginData.serveUrl" type="url" placeholder="Enter server URL"></ion-input>
+            <ion-input [(ngModel)]="loginData.serverUrl" type="url" placeholder="Enter server URL"></ion-input>
           </ion-item>
 
           <ion-item>
