--- a/app/pages/home/home.html
+++ b/app/pages/home/home.html
@@ -1,5 +1,5 @@
-<ion-header>
-  <ion-navbar>
+<ion-header >
+  <ion-navbar primary>
     <ion-title>Home</ion-title>
   </ion-navbar>
 </ion-header>
