--- a/app/pages/tabs/tabs.html
+++ b/app/pages/tabs/tabs.html
@@ -1,5 +1,4 @@
 <ion-tabs primary>
-  <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="About" tabIcon="information-circle"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Contact" tabIcon="contacts"></ion-tab>
+  <ion-tab [root]="tab1Root" tabTitle="Apps" tabIcon="md-apps"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="Account" tabIcon="md-options"></ion-tab>
 </ion-tabs>
