update app and account landing page

--- a/app/pages/apps/apps.html
+++ b/app/pages/apps/apps.html
@@ -13,8 +13,71 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding class="apps">
 
-  its app page
+  <ion-row >
+
+    <ion-col width-45 >
+      <ion-list >
+        <ion-item >
+          <ion-thumbnail >
+            <img class="menu-app-icon-list" src="img/dataEntry.png">
+          </ion-thumbnail>
+          <h2 >Data Entry</h2>
+        </ion-item>
+      </ion-list>
+    </ion-col>
+    <ion-col width-45 >
+      <ion-list>
+        <ion-item>
+          <ion-thumbnail >
+            <img class="menu-app-icon-list" src="img/reports.png">
+          </ion-thumbnail>
+          <h2 >Reports</h2>
+        </ion-item>
+      </ion-list>
+    </ion-col>
+  </ion-row>
+
+  <ion-row>
+    <ion-col width-45 >
+      <ion-list >
+        <ion-item >
+          <ion-thumbnail >
+            <img class="menu-app-icon-list" src="img/trackerCapture.png">
+          </ion-thumbnail>
+          <h2 >Tracker Capture</h2>
+        </ion-item>
+      </ion-list>
+    </ion-col>
+    <ion-col width-45 >
+      <ion-list >
+        <ion-item >
+          <ion-thumbnail >
+            <img class="menu-app-icon-list" src="img/eventCapture.png">
+          </ion-thumbnail>
+          <h2 >Event Capture</h2>
+        </ion-item>
+      </ion-list>
+    </ion-col>
+
+  </ion-row>
+  <ion-row>
+    <ion-col width-45 >
+      <ion-list>
+        <ion-item>
+          <ion-thumbnail >
+            <img class="menu-app-icon-list" src="img/dashboard.png">
+          </ion-thumbnail>
+          <h2 >Dashboard</h2>
+        </ion-item>
+      </ion-list>
+    </ion-col>
+    <ion-col width-45 >
+
+    </ion-col>
+
+  </ion-row>
+
 
 </ion-content>
