--- a/app/pages/login/login.html
+++ b/app/pages/login/login.html
@@ -19,7 +19,7 @@
     <ion-row >
       <ion-col width-100 class="loginForm">
 
-        <ion-list>
+        <ion-list *ngIf="!loadingData">
 
           <ion-item>
             <ion-input [(ngModel)]="loginData.serverUrl" type="url" placeholder="Enter server URL"></ion-input>
@@ -35,10 +35,22 @@
 
         </ion-list>
 
+        <div *ngIf="loadingData">
+          <ion-list>
+            <ion-item *ngFor="let message of loadingMessages; let currentIndex = index">
+              {{ message }}
+              <ion-icon *ngIf="(currentIndex + 1) < loadingMessages.length" name="done-all" item-right></ion-icon>
+              <div style="text-align: center" item-right *ngIf="(currentIndex + 1) >= loadingMessages.length">
+                <ion-spinner name="crescent"></ion-spinner>
+              </div>
+            </ion-item>
+          </ion-list>
+        </div>
+
       </ion-col>
     </ion-row>
 
-    <ion-row>
+    <ion-row *ngIf="1loadingData">
       <ion-col width-5></ion-col>
       <ion-col width-90>
         <button (click)="login()" full>
