lofin, reauthenticate as well as update on provders

--- a/app/pages/apps/apps.html
+++ b/app/pages/apps/apps.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar primary>
-    <ion-title>Apps</ion-title>
+    <ion-title >Apps</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -17,7 +17,7 @@
 
   <ion-row >
 
-    <ion-col width-45 >
+    <ion-col >
       <ion-list >
         <ion-item >
           <ion-thumbnail >
@@ -27,7 +27,7 @@
         </ion-item>
       </ion-list>
     </ion-col>
-    <ion-col width-45 >
+    <ion-col  >
       <ion-list>
         <ion-item>
           <ion-thumbnail >
