--- a/app/pages/tabs/tabs.html
+++ b/app/pages/tabs/tabs.html
@@ -1,4 +1,4 @@
 <ion-tabs primary>
   <ion-tab [root]="tab1Root" tabTitle="Apps" tabIcon="md-apps"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="Account" tabIcon="md-options"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="{{ accountName |accountName }}" tabIcon="md-options"></ion-tab>
 </ion-tabs>
