--- a/app/pages/about/about.html
+++ b/app/pages/about/about.html
@@ -13,20 +13,22 @@
 </ion-header>
 
 
-<ion-content class="about">
+<ion-content padding class="about">
   <ion-grid>
     <ion-row>
-      <div *ngIf="loadingData">
-        <ion-list>
-          <ion-item *ngFor="let message of loadingMessages; let currentIndex = index">
-            {{ message }}
-            <ion-icon *ngIf="(currentIndex + 1) < loadingMessages.length" name="done-all" item-right></ion-icon>
-            <div style="text-align: center" item-right *ngIf="(currentIndex + 1) >= loadingMessages.length">
-              <ion-spinner name="crescent"></ion-spinner>
-            </div>
-          </ion-item>
-        </ion-list>
-      </div>
+      <ion-col width="100">
+        <div *ngIf="loadingData">
+          <ion-list>
+            <ion-item *ngFor="let message of loadingMessages; let currentIndex = index">
+              {{ message }}
+              <ion-icon *ngIf="(currentIndex + 1) < loadingMessages.length" name="done-all" item-right></ion-icon>
+              <div style="text-align: center" item-right *ngIf="(currentIndex + 1) >= loadingMessages.length">
+                <ion-spinner name="crescent"></ion-spinner>
+              </div>
+            </ion-item>
+          </ion-list>
+        </div>
+      </ion-col>
     </ion-row>
     <ion-row>
       <div *ngIf="!loadingData">
