--- a/app/pages/profile/profile.html
+++ b/app/pages/profile/profile.html
@@ -16,21 +16,35 @@
 <ion-content class="profile">
   <ion-grid>
     <ion-row>
-      <div *ngIf="loadingData">
-        <ion-list>
-          <ion-item *ngFor="let message of loadingMessages; let currentIndex = index">
-            {{ message }}
-            <ion-icon *ngIf="(currentIndex + 1) < loadingMessages.length" name="done-all" item-right></ion-icon>
-            <div style="text-align: center" item-right *ngIf="(currentIndex + 1) >= loadingMessages.length">
-              <ion-spinner name="crescent"></ion-spinner>
-            </div>
-          </ion-item>
-        </ion-list>
-      </div>
+      <ion-col width="100">
+        <div *ngIf="loadingData">
+          <ion-list>
+            <ion-item *ngFor="let message of loadingMessages; let currentIndex = index">
+              {{ message }}
+              <ion-icon *ngIf="(currentIndex + 1) < loadingMessages.length" name="done-all" item-right></ion-icon>
+              <div style="text-align: center" item-right *ngIf="(currentIndex + 1) >= loadingMessages.length">
+                <ion-spinner name="crescent"></ion-spinner>
+              </div>
+            </ion-item>
+          </ion-list>
+        </div>
+      </ion-col>
     </ion-row>
     <ion-row>
-      <div *ngIf="!loadingData"></div>
+      <ion-col width="100">
+        <div *ngIf="!loadingData">
+          <ion-item-group>
+            <ion-item-divider light>
+              App Information
+            </ion-item-divider>
+            <ion-item *ngFor="let entry of profileInformation | objectToArray">
+              <h2>{{ entry.key }}</h2>
+              <p>{{ entry.value }}</p>
+            </ion-item>
 
+          </ion-item-group>
+        </div>
+      </ion-col>
     </ion-row>
 
   </ion-grid>
