--- a/app/pages/tracker-capture-home/tracker-capture-home.html
+++ b/app/pages/tracker-capture-home/tracker-capture-home.html
@@ -16,17 +16,19 @@
 <ion-content class="tracker-capture-home">
   <ion-grid>
     <ion-row>
-      <div *ngIf="loadingData">
-        <ion-list>
-          <ion-item *ngFor="let message of loadingMessages; let currentIndex = index">
-            {{ message }}
-            <ion-icon *ngIf="(currentIndex + 1) < loadingMessages.length" name="done-all" item-right></ion-icon>
-            <div style="text-align: center" item-right *ngIf="(currentIndex + 1) >= loadingMessages.length">
-              <ion-spinner name="crescent"></ion-spinner>
-            </div>
-          </ion-item>
-        </ion-list>
-      </div>
+      <ion-col width="100">
+        <div *ngIf="loadingData">
+          <ion-list>
+            <ion-item *ngFor="let message of loadingMessages; let currentIndex = index">
+              {{ message }}
+              <ion-icon *ngIf="(currentIndex + 1) < loadingMessages.length" name="done-all" item-right></ion-icon>
+              <div style="text-align: center" item-right *ngIf="(currentIndex + 1) >= loadingMessages.length">
+                <ion-spinner name="crescent"></ion-spinner>
+              </div>
+            </ion-item>
+          </ion-list>
+        </div>
+      </ion-col>
     </ion-row>
     <ion-row>
       <div *ngIf="!loadingData"></div>
