--- a/www/index.html
+++ b/www/index.html
@@ -16,6 +16,8 @@
   <!-- This is Ionic's root component, where the app will load -->
   <ion-app></ion-app>
 
+  <script type="application/javascript" src="library/jquery/jquery-2.1.1.min.js"></script>
+
   <!-- cordova.js required for cordova apps -->
   <script src="cordova.js"></script>
   <!-- Polyfill needed for platforms without Promise and Collection support -->
@@ -25,5 +27,23 @@
   <script src="build/js/zone.js"></script>
   <!-- The bundle which is built from the app's source code -->
   <script src="build/js/app.bundle.js"></script>
+
+  <script type="text/javascript" src="library/dhis2/jQuery/calendars/jquery.calendars.min.js"></script>
+  <script type="text/javascript" src="library/dhis2/jQuery/calendars/jquery.calendars.picker.min.js"></script>
+  <script type="text/javascript" src="library/dhis2/jQuery/calendars/jquery.calendars.plus.min.js"></script>
+  <script type="text/javascript" src="library/dhis2/jQuery/calendars/jquery.calendars.picker.ext.js"></script>
+
+  <script type="text/javascript" src="library/dhis2/jQuery/calendars/jquery.calendars.coptic.min.js"></script>
+  <script type="text/javascript" src="library/dhis2/jQuery/calendars/jquery.calendars.ethiopian.min.js"></script>
+  <script type="text/javascript" src="library/dhis2/jQuery/calendars/jquery.calendars.islamic.min.js"></script>
+  <script type="text/javascript" src="library/dhis2/jQuery/calendars/jquery.calendars.julian.min.js"></script>
+  <script type="text/javascript" src="library/dhis2/jQuery/calendars/jquery.calendars.nepali.min.js"></script>
+  <script type="text/javascript" src="library/dhis2/jQuery/calendars/jquery.calendars.thai.min.js"></script>
+  <script src="library/dhis2/dhis2.util.js"></script>
+  <script src="library/dhis2/dhis2.period.js"></script>
+  <script>
+    dhis2.period.calendar = $.calendars.instance('gregorian');
+    dhis2.period.generator = new dhis2.period.PeriodGenerator(dhis2.period.calendar, dhis2.period.DEFAULT_DATE_FORMAT);
+  </script>
 </body>
 </html>
