--- a/app/pages/organisation-units/organisation-units.html
+++ b/app/pages/organisation-units/organisation-units.html
@@ -1,19 +1,17 @@
-<!--
-  Generated template for the DataEntryHomePage page.
-
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-
-  <ion-navbar primary>
-    <ion-title>Data Entry Home</ion-title>
-  </ion-navbar>
-
+<ion-header >
+  <ion-toolbar primary>
+    <ion-title>
+      Organisation unit selection
+    </ion-title>
+    <ion-buttons start>
+      <button ion-button (click)="dismiss()">
+        <ion-icon name="md-close"></ion-icon>
+      </button>
+    </ion-buttons>
+  </ion-toolbar>
 </ion-header>
 
-
-<ion-content class="data-entry-home">
+<ion-content padding class = "organisation-units">
   <ion-grid>
     <ion-row>
       <ion-col width="100">
@@ -32,10 +30,8 @@
     </ion-row>
     <ion-row>
       <div *ngIf="!loadingData">
-        <button (click)="openModal()"> organisationUnits </button>
-        <!--{{ organisationUnits|json }}-->
+        {{ data |json }}
       </div>
-
     </ion-row>
 
   </ion-grid>
