--- a/src/pages/organisation-units/organisation-units.html
+++ b/src/pages/organisation-units/organisation-units.html
@@ -31,12 +31,68 @@
   </ion-grid>
 
   <div *ngIf="!loadingData" >
-    <div *ngFor="let organisationUnit of organisationUnitsList" >
-      <button ion-item (click)="setSelectedOrgUnit(organisationUnit)">
-        <ion-icon name="list" item-left></ion-icon>
-        <h2>{{organisationUnit.name }}</h2>
-      </button>
+
+    <div *ngFor="let orgUnit of organisationUnitsList">
+      <ion-item>
+        <ion-icon name="ios-arrow-forward" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && !hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
+        <ion-icon name="ios-arrow-down" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
+        <ion-icon name="list" *ngIf="orgUnit.children.length==0" item-left></ion-icon>
+        <span (click)="setSelectedOrgUnit(orgUnit)" >{{ orgUnit.name }}</span>
+      </ion-item>
+      <div *ngIf="hasOrgUnitChildrenOpened[orgUnit.id]" style="padding-left: 10px">
+
+        <div *ngFor="let orgUnit of orgUnit.children">
+          <ion-item>
+            <ion-icon name="ios-arrow-forward" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && !hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
+            <ion-icon name="ios-arrow-down" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
+            <ion-icon name="list" *ngIf="orgUnit.children.length==0" item-left></ion-icon>
+            <span (click)="setSelectedOrgUnit(orgUnit)" >{{ orgUnit.name }}</span>
+          </ion-item>
+          <div *ngIf="hasOrgUnitChildrenOpened[orgUnit.id]" style="padding-left: 10px">
+
+            <div *ngFor="let orgUnit of orgUnit.children">
+              <div *ngFor="let orgUnit of orgUnit.children">
+                <ion-item>
+                  <ion-icon name="ios-arrow-forward" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && !hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
+                  <ion-icon name="ios-arrow-down" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
+                  <ion-icon name="list" *ngIf="orgUnit.children.length==0" item-left></ion-icon>
+                  <span (click)="setSelectedOrgUnit(orgUnit)" >{{ orgUnit.name }}</span>
+                </ion-item>
+                <div *ngIf="hasOrgUnitChildrenOpened[orgUnit.id]" style="padding-left: 10px">
+
+                  <div *ngFor="let orgUnit of orgUnit.children">
+                    <div *ngFor="let orgUnit of orgUnit.children">
+                      <ion-item>
+                        <ion-icon name="ios-arrow-forward" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && !hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
+                        <ion-icon name="ios-arrow-down" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
+                        <ion-icon name="list" *ngIf="orgUnit.children.length==0" item-left></ion-icon>
+                        <span (click)="setSelectedOrgUnit(orgUnit)" >{{ orgUnit.name }}</span>
+                      </ion-item>
+                      <div *ngIf="hasOrgUnitChildrenOpened[orgUnit.id]" style="padding-left: 10px">
+                        <!--<div *ngFor="let orgUnit of orgUnit.children">-->
+
+                        <!--</div>-->
+                      </div>
+                    </div>
+                  </div>
+
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
     </div>
+
+
+    <!--<div *ngFor="let organisationUnit of organisationUnitsList" >-->
+      <!--<button ion-item (click)="setSelectedOrgUnit(organisationUnit)">-->
+        <!--<ion-icon name="list" item-left></ion-icon>-->
+        <!--<h2>{{organisationUnit.name }}</h2>-->
+      <!--</button>-->
+    <!--</div>-->
   </div>
 
 </ion-content>
