update orgunit selection modal as well as data entry form selection and initate modal for data set dimesion as welll as period selection

--- a/src/pages/data-entry-home/data-entry-home.html
+++ b/src/pages/data-entry-home/data-entry-home.html
@@ -34,14 +34,31 @@
     <div *ngIf="!loadingData" >
       <ion-row >
         <ion-col width="100">
-          <button (click)="openOrganisationUnitModal()" ion-button full>
-            Open modal
+          <button (click)="openOrganisationUnitModal()" ion-button full color="light">
+            {{ selectedOrganisationUnitLabel }}
           </button>
-          selectedOrganisationUnit :: {{ selectedOrganisationUnit.name }}
-
-          assignedForms : {{ assignedForms| json}}
         </ion-col>
       </ion-row>
+      <ion-row >
+        <ion-col width="100">
+          <button (click)="openDataSetsModal()" ion-button full color="light">
+            {{ selectedDataSetLabel }}
+          </button>
+        </ion-col>
+      </ion-row>
+      <ion-row >
+        <ion-col width="100">
+
+        </ion-col>
+      </ion-row>
+      <ion-row >
+        <ion-col width="100">
+
+        </ion-col>
+      </ion-row>
+
+      {{ selectedDataSet|json }}
+
     </div>
   </ion-grid>
 
