--- a/src/pages/period-selection/period-selection.html
+++ b/src/pages/period-selection/period-selection.html
@@ -1,18 +1,16 @@
-<!--
-  Generated template for the PeriodSelection page.
-
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>PeriodSelection</ion-title>
-  </ion-navbar>
-
+<ion-header >
+  <ion-toolbar color="primary">
+    <ion-title>
+      Period selection
+    </ion-title>
+    <ion-buttons start>
+      <button ion-button (click)="dismiss()">
+        <ion-icon name="md-close"></ion-icon>
+      </button>
+    </ion-buttons>
+  </ion-toolbar>
 </ion-header>
 
-
-<ion-content padding>
-
+<ion-content padding class = "periodSelection">
+    {{ periodList|json }}
 </ion-content>
