--- a/src/pages/data-set-selection/data-set-selection.html
+++ b/src/pages/data-set-selection/data-set-selection.html
@@ -12,11 +12,11 @@
 </ion-header>
 <ion-content padding class = "dataEntryFormSelection">
 
-  <ion-item *ngFor="let dataSet of dataESetsList"   (click)="setSelectedDataSet(dataSet)">
+  <ion-item *ngFor="let dataSet of dataSetsList"   (click)="setSelectedDataSet(dataSet)">
     <ion-icon name="list" item-left></ion-icon>
     <span (click)="setSelectedDataSet(orgUnit)" >{{ dataSet.name }}</span>
   </ion-item>
-  <ion-item *ngIf = "dataESetsList.length == 0">
+  <ion-item *ngIf = "dataSetsList.length == 0">
     There is no Data entry form to select
   </ion-item>
 
