--- a/src/pages/period-selection/period-selection.html
+++ b/src/pages/period-selection/period-selection.html
@@ -11,6 +11,31 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding class = "periodSelection">
-    {{ periodList|json }}
+<ion-content class = "periodSelection">
+
+
+  <ion-grid>
+    <ion-row>
+      <ion-col width="50">
+        <button ion-button full (click)="previous()">Previous</button>
+      </ion-col>
+      <ion-col width="50">
+        <button ion-button full (click)="next()">Next</button>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col width="100">
+        <ion-item *ngFor="let period of periodList" (click)="setSelectedPeriod(period)">
+          <ion-icon name="list" item-left></ion-icon>
+          <span >{{ period.name }}</span>
+        </ion-item>
+        <ion-item *ngIf = "periodList.length == 0">
+          There is no period to select
+        </ion-item>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+
+
 </ion-content>
