--- a/src/pages/organisation-units/organisation-units.html
+++ b/src/pages/organisation-units/organisation-units.html
@@ -50,16 +50,23 @@
           <div *ngIf="hasOrgUnitChildrenOpened[orgUnit.id]" style="padding-left: 10px">
 
             <div *ngFor="let orgUnit of orgUnit.children">
-              <div *ngFor="let orgUnit of orgUnit.children">
-                <ion-item>
-                  <ion-icon name="ios-arrow-forward" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && !hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
-                  <ion-icon name="ios-arrow-down" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
-                  <ion-icon name="list" *ngIf="orgUnit.children.length==0" item-left></ion-icon>
-                  <span (click)="setSelectedOrgUnit(orgUnit)" >{{ orgUnit.name }}</span>
-                </ion-item>
-                <div *ngIf="hasOrgUnitChildrenOpened[orgUnit.id]" style="padding-left: 10px">
+              <ion-item>
+                <ion-icon name="ios-arrow-forward" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && !hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
+                <ion-icon name="ios-arrow-down" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
+                <ion-icon name="list" *ngIf="orgUnit.children.length==0" item-left></ion-icon>
+                <span (click)="setSelectedOrgUnit(orgUnit)" >{{ orgUnit.name }}</span>
+              </ion-item>
+              <div *ngIf="hasOrgUnitChildrenOpened[orgUnit.id]" style="padding-left: 10px">
 
-                  <div *ngFor="let orgUnit of orgUnit.children">
+                <div *ngFor="let orgUnit of orgUnit.children">
+                  <ion-item>
+                    <ion-icon name="ios-arrow-forward" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && !hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
+                    <ion-icon name="ios-arrow-down" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
+                    <ion-icon name="list" *ngIf="orgUnit.children.length==0" item-left></ion-icon>
+                    <span (click)="setSelectedOrgUnit(orgUnit)" >{{ orgUnit.name }}</span>
+                  </ion-item>
+                  <div *ngIf="hasOrgUnitChildrenOpened[orgUnit.id]" style="padding-left: 10px">
+
                     <div *ngFor="let orgUnit of orgUnit.children">
                       <ion-item>
                         <ion-icon name="ios-arrow-forward" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && !hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
@@ -68,16 +75,30 @@
                         <span (click)="setSelectedOrgUnit(orgUnit)" >{{ orgUnit.name }}</span>
                       </ion-item>
                       <div *ngIf="hasOrgUnitChildrenOpened[orgUnit.id]" style="padding-left: 10px">
-                        <!--<div *ngFor="let orgUnit of orgUnit.children">-->
 
-                        <!--</div>-->
+                        <div *ngFor="let orgUnit of orgUnit.children">
+                          <ion-item>
+                            <ion-icon name="ios-arrow-forward" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && !hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
+                            <ion-icon name="ios-arrow-down" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
+                            <ion-icon name="list" *ngIf="orgUnit.children.length==0" item-left></ion-icon>
+                            <span (click)="setSelectedOrgUnit(orgUnit)" >{{ orgUnit.name }}</span>
+                          </ion-item>
+                          <div *ngIf="hasOrgUnitChildrenOpened[orgUnit.id]" style="padding-left: 10px">
+
+                          </div>
+                        </div>
+
                       </div>
+
                     </div>
+
                   </div>
 
                 </div>
+
               </div>
             </div>
+
           </div>
 
         </div>
