auto reporn tree if orgunit has been selected

--- a/src/pages/event-capture-home/event-capture-home.html
+++ b/src/pages/event-capture-home/event-capture-home.html
@@ -7,13 +7,13 @@
 <ion-header>
 
   <ion-navbar color="primary">
-    <ion-title>Data Entry Home</ion-title>
+    <ion-title>Event Capture Home</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content  class="data-entry-home">
+<ion-content  class="event-capture-home">
 
   <ion-grid>
     <ion-row>
