--- a/src/pages/program-selection/program-selection.html
+++ b/src/pages/program-selection/program-selection.html
@@ -1,7 +1,7 @@
 <ion-header >
   <ion-toolbar color="primary">
     <ion-title>
-      Data Entry Form selection
+      Program selection selection
     </ion-title>
     <ion-buttons start>
       <button ion-button (click)="dismiss()">
@@ -14,7 +14,7 @@
 
   <ion-item *ngFor="let program of programsList"   (click)="setSelectedProgram(program)">
     <ion-icon name="list" item-left></ion-icon>
-    <span (click)="setSelectedProgram(orgUnit)" >{{ program.name }}</span>
+    <span (click)="setSelectedProgram(program)" >{{ program.name}}</span>
   </ion-item>
   <ion-item *ngIf = "programsList.length == 0">
     There is no Program to select
