--- a/src/pages/apps/apps.html
+++ b/src/pages/apps/apps.html
@@ -33,23 +33,13 @@
           <ion-thumbnail >
             <img class="menu-app-icon-list" src="assets/img/reports.png">
           </ion-thumbnail>
-          <h2 >Reports</h2>
+          <h2 >Standard Reports</h2>
         </ion-item>
       </ion-list>
     </ion-col>
   </ion-row>
 
   <ion-row>
-    <ion-col width-45 (click)="goToView('trackerCapture')" >
-      <ion-list >
-        <ion-item >
-          <ion-thumbnail >
-            <img class="menu-app-icon-list" src="assets/img/trackerCapture.png">
-          </ion-thumbnail>
-          <h2 >Tracker Capture</h2>
-        </ion-item>
-      </ion-list>
-    </ion-col>
     <ion-col width-45 (click)="goToView('eventCapture')" >
       <ion-list >
         <ion-item >
@@ -60,9 +50,6 @@
         </ion-item>
       </ion-list>
     </ion-col>
-
-  </ion-row>
-  <ion-row>
     <ion-col width-45 (click)="goToView('dashboard')" >
       <ion-list>
         <ion-item>
@@ -73,11 +60,23 @@
         </ion-item>
       </ion-list>
     </ion-col>
-    <ion-col width-45 >
-
-    </ion-col>
-
   </ion-row>
+  <!--<ion-row>-->
+    <!--<ion-col width-45 (click)="goToView('trackerCapture')" >-->
+      <!--<ion-list >-->
+        <!--<ion-item >-->
+          <!--<ion-thumbnail >-->
+            <!--<img class="menu-app-icon-list" src="assets/img/trackerCapture.png">-->
+          <!--</ion-thumbnail>-->
+          <!--<h2 >Tracker Capture</h2>-->
+        <!--</ion-item>-->
+      <!--</ion-list>-->
+    <!--</ion-col>-->
+    <!--<ion-col width-45 >-->
+
+    <!--</ion-col>-->
+
+  <!--</ion-row>-->
 
 
 </ion-content>
