--- a/src/pages/data-entry-form/data-entry-form.html
+++ b/src/pages/data-entry-form/data-entry-form.html
@@ -5,14 +5,40 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
   <ion-navbar color="primary">
     <ion-title>Data Entry Form</ion-title>
   </ion-navbar>
-
 </ion-header>
 
 
 <ion-content class="dataEntryForm">
-  {{ data|json }}
+
+  <ion-grid>
+    <ion-row>
+      <ion-col width="100">
+        <div *ngIf="loadingData">
+          <ion-list>
+            <ion-item *ngFor="let message of loadingMessages; let currentIndex = index">
+              {{ message }}
+              <ion-icon *ngIf="(currentIndex + 1) < loadingMessages.length" name="done-all" item-right></ion-icon>
+              <div style="text-align: center" item-right *ngIf="(currentIndex + 1) >= loadingMessages.length">
+                <ion-spinner name="crescent"></ion-spinner>
+              </div>
+            </ion-item>
+          </ion-list>
+        </div>
+      </ion-col>
+    </ion-row>
+
+    <div *ngIf="!loadingData">
+      <ion-row>
+        <ion-col width="100">
+          {{ dataEntryFormSelectionParameter|json }}<hr>
+          {{ dataSetAttributeOptionCombo }}<hr>
+        </ion-col>
+      </ion-row>
+    </div>
+
+  </ion-grid>
+
 </ion-content>
