--- a/src/pages/setting-home/setting-home.html
+++ b/src/pages/setting-home/setting-home.html
@@ -7,12 +7,32 @@
 <ion-header>
 
   <ion-navbar color="primary">
-    <ion-title>Settings</ion-title>
+    <ion-title>Setting</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
-
+<ion-content class="setting-home">
+  <ion-item-group>
+    <ion-item-divider color="primary">Form setting</ion-item-divider>
+    <ion-item>
+      <ion-icon name="list" item-left></ion-icon>
+      Synchronization
+      <ion-icon name="arrow-forward" item-right></ion-icon>
+    </ion-item>
+    <ion-item>
+      <ion-icon name="list" item-left></ion-icon>
+      Form Label
+      <ion-icon name="arrow-forward" item-right></ion-icon>
+    </ion-item>
+  </ion-item-group>
+  <ion-item-group>
+    <ion-item-divider color="primary">Security setting</ion-item-divider>
+    <ion-item>
+      <ion-icon name="list" item-left></ion-icon>
+      Data Entry Values
+      <ion-icon name="arrow-forward" item-right></ion-icon>
+    </ion-item>
+  </ion-item-group>
 </ion-content>
